TAG: gxdhtload-6-0-6-14
DATE: 10/31/2016
STAFF: sc
CHANGES: TR12370 Project GXD HT
1) added flagExperiments.py and flagExperiments.sh to set evaluation state to
   maybe, and update evalDate, evalBy, modDate and modBy for experiments
   associated with pubmed IDs that have JNums selected for expression

TAG: gxdhtload-6-0-6-13
DATE: 10/28/2016
STAFF: sc
CHANGES: TR12370 Project GXD HT
added index.html

TAG: gxdhtload-6-0-6-12
DATE: 10/28/2016
STAFF: sc
CHANGES: TR12370 Project GXD HT
1) gxdhtload.config.default - changed input to weekly input file

TAG: gxdhtload-6-0-6-11
TAG: gxdhtload-6-0-6-10
TAG: gxdhtload-6-0-6-9
DATE: 10/26/2016
STAFF: sc
CHANGES: TR12370 Project GXD HT
1) gxdhtload.config.default - changed input to initial file

TAG: gxdhtload-6-0-6-8
DATE: 10/26/2016
STAFF: sc
CHANGES: TR12370 Project GXD HT
1. added gxdhtload.py which had never been added
2. removed debug from several scripts

TAG: gxdhtload-6-0-6-7
DATE: 10/19/2016
STAFF: sc
CHANGES: TR12370 Project GXD HT
1) US108 - Clean up URLs that appear in description fields.

TAG: gxdhtload-6-0-6-6
TAG: gxdhtload-6-0-6-5
DATE: 10/19/2016
STAFF: sc
CHANGES: TR12370 Project GXD HT
1) US111 - Import PubMed IDs from GEO
second tag clarified GXD for MGD and updated some QC labels

TAG: gxdhtload-6-0-6-4
DATE: 09/29/2016
STAFF: sc
CHANGES: TR12370 Project GXD HT
1) US30 - Process 4 years worth of data weekly/find new PubMed IDs

TAG: gxdhtload-6-0-6-3
DATE: 09/13/2016
STAFF: sc
CHANGES: TR12370 Project GXD HT
1)US22 and US70 (load implementation)

TAG: gxdhtload-6-0-6-2
TAG: gxdhtload-6-0-6-1
DATE: 08/26/2016
STAFF: sc
CHANGES: TR12370 Project GXD HT
1) US23 Load QC