@@ -8,4 +8,19 @@ fi
 
 . ${MGICONFIG}/master.config.sh
 
+cd `dirname $0`
+
+COMMON_CONFIG=gxdhtload.config
+
+#
+# Make sure the common configuration file exists and source it.
+#
+if [ -f ../${COMMON_CONFIG} ]
+then
+    . ../${COMMON_CONFIG}
+else
+    echo "Missing configuration file: ${COMMON_CONFIG}"
+    exit 1
+fi
+
 ./flagExperiments.py
